prevent the app from adding scrollbars ever
* this app should never scroll on principle

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   margin: 0;
+  overflow: hidden;
   padding: 0;
 }
 
